2011-06-06  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdb.py gdbmi.py: Dereference pointers in balloon evaluation.
	* vim.py tty.py: Do not use a file descriptor set as the condition for
	terminating the loop as asyncore (starting with python 2.6) passes an
	os.dup of the file descriptor to build the file wrapper dispatcher.
	* vim.py gdb.py tty.py inferior_tty.py: Fix gdb warning "Failed to set
	controlling terminal".
	* gdbmi.py: The 'frame' command updates the frame sign.
	* setup.py inferior_tty.py gdb.py: Allow the gdb 'shell' command and
	include inferior_tty.py in the distribution.
	* gdb.py: Handling of the netbeans socket disconnection, closes the
	gdb session also when gdb is busy.
	* buffer.py netbeans.py: Disable automatic display of the console
	(rework).
	* vim.py buffer.py netbeans.py debugger.py: Add the 'none' LOCATION to
	the '--window' command line option.
	* gdb.py: Ignore 'sigint' or 'quit' command on startup.
	* gdb.py gdbmi.py debugger.py posix.py: On gdb abnormal termination,
	save the project file and forcibly terminate the current session.
	* gdbmi.py: Set breakpoint in a template function.
	* vim.py: Explicit error message after installation failure.
	* debugger.py: Do not send any netbeans command after DETACH.

===============================================================================
2010-11-15  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* buffer.py debugger.py gdb.py pydb.py netbeans.py vim.py: Support of
	pdb, the python debugger.

===============================================================================
2010-09-26  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdbmi.py: Fix the highlighting of a watched variable child is not
	reset when the value of the child object does not change, after
	stepping for example.
	* gdb.py gdbmi.py: The new cwindow command.
	* vim.py: Fix error messages scramble vim (not gvim) display.